# ProteinStructureClassify

./: CMakeLists.txt  Collapse.cpp  Collapse.hpp  Constants.cpp  Constants.hpp  FindANN.cmake  GIC.cpp  GIC.hpp  MortonCode.cpp  MortonCode.hpp  PDB-File.txt  README.md  RandomHomology.cpp  RandomHomology.hpp  Timing.txt  Utilities.cpp  Utilities.hpp  Weave3_t.txt  build.sh  diagram.py  fromRandom.txt  main.cpp  sibaco-dec  size.txt
Graphs/: Graph.hpp  KNN_Graph.cpp  KNN_Graph.hpp  NormalGraph.cpp  NormalGraph.hpp
PDB-File/: 1o9a.pdb_data2.txt  PDB-File_pers
PDB-File/1o9a/: 1o9a_collapses  1o9a_complex.txt  1o9a_iDC
SimPers/: SimplicialComplex.cpp  SimplicialComplex.h
Wrappers/: GICWrapper.cpp  GICWrapper.hpp  SimPersWrapper.cpp  SimPersWrapper.hpp  SimPersWrapper.hpp~
d2ktx__/: d2ktx___complex.txt
